# python-project-folder-structure

./: .gitignore  LICENSE  README.md  pyproject.toml
project/: __init__.py  cli.py
project/cli/: __init__.py  fibonacci.py
project/resources/: fibonacci.py
tests/cli/: test_cli.py  test_fibonnaci.py
tests/resources/: test_fibonnaci.py
